--- a/templates/header.html
+++ b/templates/header.html
@@ -12,18 +12,16 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="{% url 'home' %}">
-        <img alt="Brand" src="{% static 'bountyomatic/img/logo.png' %}">
+        <img class="hidden-xs hidden-sm" alt="Brand" src="{% static 'bountyomatic/img/logo.png' %}">
+        <img class="visible-xs visible-sm" alt="Brand" src="{% static 'bountyomatic/img/logo-mini.png' %}">
       </a>
     </div>
     <div class="collapse navbar-collapse" id="navbar-collapse">
     	<ul class="nav navbar-nav navbar-left">
     		{% if user.is_authenticated %}
-          <div class="nav navbar-text progress" style="width:270px;margin-top:16px;margin-bottom:-16px;height:30px">
-            <div class="progress-bar progress-bar-warning progress-bar-striped active battletag" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%;padding-top:8px;font-weight:bold;font-size:90%">{% trans 'Loading data from Blizzard...' %}</div>
+          <div id="loading-bar" class="nav navbar-text progress">
+            <div class="progress-bar progress-bar-warning progress-bar-striped active battletag" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">{% trans 'Loading data from Blizzard...' %}</div>
           </div>
-          {% if user.is_staff %}
-            <li><a class="danger-text" href="/admin">{% trans "Access admin" %}</a></li>
-          {% endif %}
       	{% endif %}
     	</ul>
     	<ul class="nav navbar-nav navbar-right">
@@ -33,25 +31,25 @@
   		  {% else %}
          	<li class="{% if request.path == '/bounty/add' %}active{% endif %}">
             <a href="{% url 'bounty-add' %}">
-              <span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span>
+              <span class="hidden-xs glyphicon glyphicon-screenshot" aria-hidden="true"></span>
               {% trans "Add bounty" %}
             </a>
           </li>
-        	<li>
-            <a href="{% url 'logout' %}">
-              <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
-                {% trans "Logout" %}
+          <li>
+            <a title="{% trans 'Logout' %}" href="{% url 'logout' %}">
+              <span class="visible-lg visible-md visible-sm hidden-xs glyphicon glyphicon-off" aria-hidden="true"></span>
+              <span class="hidden-lg hidden-md hidden-sm visible-xs">{% trans "Logout" %}</span>
             </a>
           </li>
   		  {% endif %}
         <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{% trans "Language" %} <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" title="{% trans 'Language' %}"><span class="glyphicon glyphicon-globe visible-lg visible-md visible-sm hidden-xs"></span><span class="hidden-lg hidden-md hidden-sm visible-xs">{% trans "Language" %}</span></a>
             <ul id="language-switcher" class="dropdown-menu" role="menu">
               {% for lang in LANGUAGES %}
                 <li><a href="#" value="{{ lang.0 }}">{{ lang.1 }}</a></li>
               {% endfor %}
             </ul>
-          </li>
+        </li>
       </ul>
     </div>
   </div>
