Update markdown help

--- a/templates/bounties/comment-edit.html
+++ b/templates/bounties/comment-edit.html
@@ -18,7 +18,7 @@
     {% trans "Comment" %}
   </label>
   <small class="help">
-    <p class="help-block">{% trans "Markdown allowed but images and raw html won't be rendered." %}</p>
+    <p class="help-block">{% trans "Markdown allowed but images and raw html won't be rendered:" %} *<i>italic</i>*, **<b>bold</b>**, [link](http://www.google.com)</p>
   </small>
   <textarea
       class="form-control"
