--- a/templates/bounties/add.html
+++ b/templates/bounties/add.html
@@ -77,7 +77,7 @@
     {% trans "Choose the reward" %}
   </label>
   <small class="help hidden">
-    <p class="help-block">{% trans "Markdown allowed." %}</p>
+    <p class="help-block">{% trans "Markdown allowed:" %} *<i>italic</i>*, **<b>bold</b>**, [link](http://www.google.com)</p>
   </small>
   <textarea class="form-control hidden" id="reward" rows="4" cols="50"></textarea>
   <br>
@@ -85,7 +85,7 @@
     {% trans "Describe the bounty motivation and kill conditions" %}
   </label>
   <small class="help hidden">
-    <p class="help-block">{% trans "Markdown allowed." %}</p>
+    <p class="help-block">{% trans "Markdown allowed:" %} *<i>italic</i>*, **<b>bold</b>**, [link](http://www.google.com)</p>
   </small>
   <textarea class="form-control hidden" id="description" rows="4" cols="50"></textarea>
   <br>
@@ -109,8 +109,6 @@
   </div>
 </form> 
 <!-- End block -->
-
-
 {% endblock %}
 
 {% block javascripts %}
