--- a/templates/header.html
+++ b/templates/header.html
@@ -26,22 +26,30 @@
     	</ul>
     	<ul class="nav navbar-nav navbar-right">
         <li class="{% if request.path == '/bounty/' %}active{% endif %}"><a href="{% url 'bounty-list' %}">{% trans "Bounties" %}</a></li>
+        
       	{% if not user.is_authenticated %}
   			  <li><a href="{% url 'social:begin' 'battlenet-oauth2' %}">{% trans "Sign in" %}</a></li>
   		  {% else %}
          	<li class="{% if request.path == '/bounty/add' %}active{% endif %}">
             <a href="{% url 'bounty-add' %}">
-              <span class="hidden-xs glyphicon glyphicon-screenshot" aria-hidden="true"></span>
               {% trans "Add bounty" %}
             </a>
           </li>
+  		  {% endif %}
+        <li>
+            <a title="{% trans 'Help' %}" href="{% url 'help' %}">
+              <span class="visible-lg visible-md visible-sm hidden-xs glyphicon glyphicon-question-sign" aria-hidden="true"></span>
+              <span class="hidden-lg hidden-md hidden-sm visible-xs">{% trans "Help" %}</span>
+            </a>
+        </li>
+        {% if user.is_authenticated %}
           <li>
             <a title="{% trans 'Logout' %}" href="{% url 'logout' %}">
               <span class="visible-lg visible-md visible-sm hidden-xs glyphicon glyphicon-off" aria-hidden="true"></span>
               <span class="hidden-lg hidden-md hidden-sm visible-xs">{% trans "Logout" %}</span>
             </a>
           </li>
-  		  {% endif %}
+        {% endif %}
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" title="{% trans 'Language' %}"><span class="glyphicon glyphicon-globe visible-lg visible-md visible-sm hidden-xs"></span><span class="hidden-lg hidden-md hidden-sm visible-xs">{% trans "Language" %}</span></a>
             <ul id="language-switcher" class="dropdown-menu" role="menu">
