--- a/templates/bounties/detail.html
+++ b/templates/bounties/detail.html
@@ -184,7 +184,7 @@
           <div class="media">
             <div class="media-left media-top">
               <a href="{{ comment.character_armory }}" target="_blank">
-                <img class="img-rounded media-object" src="{{ comment.character_thumbnail }}" style="height:60%;width:auto;">
+                <img class="img-rounded media-object character-thumbnail" src="{{ comment.character_thumbnail }}">
               </a>
             </div>
             <div class="media-body comment-text">{{ comment.text|safe }}{% if comment.edited %}<hr><span class="comment-edited">{% trans "Edited at" %} {{ comment.updated_date|date:"l d M Y" }} {{ comment.updated_date|time:"H:i" }}</span>{% endif %}</div>
