--- a/templates/bounties/add.html
+++ b/templates/bounties/add.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div id="loading">
-  <center><span class="glyphicon glyphicon-refresh glyphicon-spin"></span> Loading...</center>
+  <center><span class="glyphicon glyphicon-refresh glyphicon-spin"></span> {% trans "Loading..." %}</center>
 </div>
 <form id="bounty-for">
   <div id="bounty-status-box" class="hidden well">
