--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
     <script src="{% static 'bountyomatic/js/jquery.cookie-1.4.1.min.js' %}"></script>
     <script src="{% static 'bountyomatic/js/chosen.jquery.min.js' %}"></script>
     <script src="{% static 'bountyomatic/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'bountyomatic/js/utils.js' %}"></script>
     <script src="{% static 'bountyomatic/js/bountyomatic.js' %}"></script>
   {% endcompress %}
 	{% block javascripts %}{% endblock %}
