--- a/templates/bounties/detail.html
+++ b/templates/bounties/detail.html
@@ -292,27 +292,16 @@
         }); 
       };
 
-      function getPlayerCharacters(callback) {
-        $.ajax({
-          url: "/api/player-characters",
-          dataType: 'json',
-          success: function(data) {
-            $.map(data, function(val) {
-              $("select#player-characters").append(
-                "<option value=\"" + val.region + "|" + val.normalized_realm +
-                "|"  + val.name + "\">" + val.name + " - " + val.realm +
-                " (" + val.class_display + ") (" + val.level + ") (" + val.faction_display + ")</option>");
-            });
-            $("form#comment-form").css("display", "block");
-            $("form#comment-form #player-characters").chosen({no_results_text: "{% trans 'Oops, no character found!' %}"});
-            if (callback)
-              callback();
-          },
-          error: function(xhr, status, err) {
-            console.error("/api/player-characters", status, err.toString());
-          }
-        });  
-      };
+      function setPlayerCharacters(data) {
+        $.map(data, function(val) {
+          $("select#player-characters").append(
+            "<option value=\"" + val.region + "|" + val.normalized_realm +
+            "|"  + val.name + "\">" + val.name + " - " + val.realm +
+            " (" + val.class_display + ") (" + val.level + ") (" + val.faction_display + ")</option>");
+        });
+        $("form#comment-form").css("display", "block");
+        $("form#comment-form #player-characters").chosen({no_results_text: "{% trans 'Oops, no character found!' %}"});
+      }
 
       $("form#comment-form").submit(function(e) {
         e.preventDefault();
@@ -323,7 +312,9 @@
         saveComment();
       });
 
-      getPlayerCharacters();
+      getPlayerCharacters(function(data) {
+        setPlayerCharacters(data);
+      });
     });
   </script>
 {% endblock %}
