--- a/templates/bounties/list.html
+++ b/templates/bounties/list.html
@@ -3,54 +3,56 @@
 {% load staticfiles %}
 
 {% block content %}
-  <label
-        id="bounty-status-label"
-        for="status">
-    {% trans "Status" %}
-  </label>
-  <select
-      class="form-control"
-      id="bounty-status">
-    <option value="all" selected>---</option>
-    <option value="1">{% trans "Open" %}</option>
-    <option value="2">{% trans "Closed" %}</option>
-    <option value="3">{% trans "Cancelled" %}</option>
-  </select>
-  <br>
-  <label id="regions-label" for="region" class="hidden">
-    {% trans "Region" %}
-  </label>
-  <select class="form-control hidden" id="regions"></select>
-  <br>
-  <div id="realms-box" class="hidden">
-    <label id="realms-label" for="realms">
-      {% trans "Target realm" %}
-    </label>
-    <select class="form-control" id="realms">
-      <option value="all">---</option>
-    </select>
-    <br>
-    <br>
-  </div>
-  <label id="destination-character-label" for="realms">
-    {% trans "Target name" %}
-  </label>
-  <input id="destination-character" class="form-control" type="text" />
-
-  <center>
-    {% if user.is_authenticated %}
-      <div class="checkbox">
-        <label>
-          <input id="is-private-input" type="checkbox"> {% trans "Show only your bounties" %}
-        </label>
-      </div>
-    {% else %}
+  <div class="row">
+    <div class="col-md-6">
+      <label id="bounty-status-label" for="status">{% trans "Status" %}</label>
+      <select class="form-control" id="bounty-status">
+        <option value="all" selected>---</option>
+        <option value="1">{% trans "Open" %}</option>
+        <option value="2">{% trans "Closed" %}</option>
+        <option value="3">{% trans "Cancelled" %}</option>
+      </select>
       <br>
-    {% endif %}
-    <button class="btn btn-success btn-lg" id="search">
-      {% trans "Search me bounties!" %}
-    </button>
-  </center>
+      <label id="regions-label" for="region">{% trans "Region" %}</label>
+      <select class="form-control" id="regions">
+        <option value="all" selected>---</option>
+        <option value="eu">{% trans "Europe" %}</option>
+        <option value="us">{% trans "US" %}</option>
+      </select>
+      <br>
+    </div>
+    <div class="col-md-6">
+      <label id="realms-label" for="realms">{% trans "Target realm" %}</label>
+      <select class="form-control" id="realms">
+        <option value="all">---</option>
+      </select>
+      <br>
+      <label id="destination-character-label" for="destination-character">{% trans "Target name" %}</label>
+      <input id="destination-character" class="form-control" type="text" />
+      <br>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6">
+      <label id="factions-label" for="factions">{% trans "Target faction" %}</label>
+      <select class="form-control" id="factions">
+        <option value="all">---</option>
+        <option value="0">{% trans "Alliance" %}</option>
+        <option value="1">{% trans "Horde" %}</option>
+      </select>
+      {% if user.is_authenticated %}
+        <div class="checkbox">
+          <label><input id="is-private-input" type="checkbox"> {% trans "Show only your bounties" %}</label>
+        </div>
+      {% endif %}
+    </div>
+    <div class="col-md-6">
+      <br>
+      <button class="btn btn-success btn-lg pull-right" id="search">
+        {% trans "Search me bounties!" %}
+      </button>
+    </div>
+  </div>
 
   <hr>
 
@@ -123,20 +125,10 @@
 {% block javascripts %}
 <script>
   var selectedStatus = 'all';
+  var selectedFaction = 'all';
   var selectedRegion = null;
   var selectedRealm = null;
   var onlyOwned = false;
-
-  function setRegions(data) {
-    $("select#regions").text('');
-    $("select#regions").append("<option value=\"all\">---</option>");
-    $.map(data, function(val) {
-      $("select#regions").append(
-        "<option value=\"" + val.slug + "\">" + val.name + "</option>");
-    });
-    $("select#regions").removeClass("hidden");
-    $("label#regions-label").removeClass("hidden");
-  };
 
   function setRealms(data) {
     $("select#realms").text('').append("<option value=\"all\">---</option>");
@@ -144,15 +136,16 @@
       $("select#realms").append(
         "<option value=\"" + val.slug + "\">" + val.name + "</option>");
     });
+    $("select#realms").after('<br>');
     $("select#realms").chosen({no_results_text: "{% trans 'Oops, no realm found!' %}"})
     $("select#realms").trigger('chosen:updated');;
-    $("div#realms-box").removeClass("hidden");
   };
 
   function updateBounties() {
     selectedStatus = $("select#bounty-status").val();
     selectedRegion = $("select#regions").val();
     selectedRealm = $("select#realms").val();
+    selectedFaction = $("select#factions").val();
     destinationCharacter = $("input#destination-character").val();
     onlyOwned = $("input#is-private-input").prop('checked');
 
@@ -170,6 +163,10 @@
       params.realm = selectedRealm;
       $.cookie('search-realm', selectedRealm, {expires: 21});
     };
+    if (selectedFaction) {
+      params.faction = selectedFaction;
+      $.cookie('search-faction', selectedFaction, {expires: 21});
+    };
     if (destinationCharacter)
       params.destination = destinationCharacter;
     if (onlyOwned)
@@ -186,21 +183,24 @@
       }).prop('selected', true);
     };
 
+    selectedFaction = getUrlParameter('faction') || $.cookie('search-faction');
+    if (selectedFaction) {
+      $("select#factions option").filter(function() {
+        return $(this).val() == selectedFaction; 
+      }).prop('selected', true);
+    };
+
     if (getUrlParameter('destination'))
       $("input#destination-character").val(getUrlParameter('destination'));
     if (getUrlParameter('owned'))
       $("input#is-private-input").prop('checked', true);
 
-    getRegions(function(data) {
-      setRegions(data);
-
-      selectedRegion = getUrlParameter('region') || $.cookie('search-region');
-      if (selectedRegion) {
-        $("select#regions option").filter(function() {
-              return $(this).val() == selectedRegion; 
-        }).prop('selected', true);
-        if (selectedRegion == "all")
-          return;
+    selectedRegion = getUrlParameter('region') || $.cookie('search-region');
+    if (selectedRegion) {
+      $("select#regions option").filter(function() {
+            return $(this).val() == selectedRegion; 
+      }).prop('selected', true);
+      if (selectedRegion != "all") {
         getRealms(selectedRegion || $("select#regions").val(), function(realms_data) {
           setRealms(realms_data);
 
@@ -208,15 +208,15 @@
           if (selectedRealm) {
             $("select#realms option").filter(function() {
               if ($(this).val() == selectedRealm)
-              return $(this).val() == selectedRealm; 
+                return $(this).val() == selectedRealm; 
             }).prop('selected', true);
             $("select#realms").trigger('chosen:updated');;
           };
         });
       };
-    });
+    };
     $("select#regions").change(function() {
-      getRealms($("select#regions").val(), function(data) {
+      getRealms($(this).val(), function(data) {
         setRealms(data);
       });
     });
