Fix url decoding

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <html lang="{{ LANG }}">
 <head>
   <title>Bounty-O-Matic</title>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   {% compress css %}
     <link rel="stylesheet" type="text/css" href="{% static 'bountyomatic/css/chosen.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'bountyomatic/css/bootstrap.min.css' %}">
