--- a/static/bountyomatic/css/custom.css
+++ b/static/bountyomatic/css/custom.css
@@ -96,7 +96,12 @@ div.chosen-container.chosen-container-active.chosen-with-drop a.chosen-single {
 }
 
 #loading-bar {
-  width:270px;margin-top:16px;margin-bottom:-16px;height:30px
+  margin-left:0px;
+  margin-right:-5px;
+  width:270px;
+  margin-top:16px;
+  margin-bottom:-16px;
+  height:30px
 }
 #loading-bar .progress-bar {
   width:100%;padding-top:8px;font-weight:bold;font-size:90%
