--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
 <head>
   <title>Bounty-O-Matic</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% compress css %}
     <link rel="stylesheet" type="text/css" href="{% static 'bountyomatic/css/chosen.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'bountyomatic/css/bootstrap.min.css' %}">
