--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,12 @@
 <!DOCTYPE html>
 <html lang="{{ LANG }}">
 <head>
-  <title>Bounty-O-Matic</title>
+  <title>Bounty-O-Matic - Bounties for World of Warcraft</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Description" content="Bounty-O-Matic is a bounties system for World of Warcraft. Post a bounty on a player and find mercenaries to kill him.">
+ 
+  <meta name="google-site-verification" content="-KyKXaYciXFPQCJ5PsPh8hWXUBtypech3gRIgUzOAw4" />
   {% compress css %}
     <link rel="stylesheet" type="text/css" href="{% static 'bountyomatic/css/chosen.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'bountyomatic/css/bootstrap.min.css' %}">
