--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-md-12">
     <hr>
-    Bounty-O-Matic <span class="hidden-xs hidden-sm">{% trans "for" %} World of Warcraft {% trans "by" %} Bodoc-Conseil des Ombres (<a href="http://stormwind-legion.fr/" target="_blank">Légion de Stormwind</a>)</span> - contact@bounty-o-matic.com<small class="pull-right">{% if user.is_authenticated %}{% if user.is_staff %}<a class="danger-text" href="/admin">{% trans "Admin" %}</a> | {% endif %}<a id="refresh-link" class="footer-refresh" href="#">{% trans "Refresh your BattleNet data" %}</a> | {% endif %}0.1 (Zappy Gnome)</small>
+    Bounty-O-Matic <span class="hidden-xs hidden-sm">{% trans "for" %} World of Warcraft {% trans "by" %} Bodoc-Conseil des Ombres (<a href="http://stormwind-legion.fr/" target="_blank">Légion de Stormwind</a>)</span> - contact@bounty-o-matic.com<small class="pull-right">{% if user.is_authenticated %}{% if user.is_staff %}<a class="danger-text" href="/admin">{% trans "Admin" %}</a> | {% endif %}<a id="refresh-link" class="footer-refresh" href="#">{% trans "Refresh your BattleNet data" %}</a> | {% endif %}0.2 (Tron-Tron 2000)</small>
   </div>
 </div>
 <div class="row">
