--- a/templates/bounties/detail.html
+++ b/templates/bounties/detail.html
@@ -197,7 +197,11 @@
                 <img class="img-rounded media-object character-thumbnail" src="{{ comment.character_thumbnail }}" onerror="this.onerror = null; this.src='{{ comment.character_thumbnail_fallback }}'">
               </a>
             </div>
-            <div class="media-body comment-text">{{ comment.text|safe }}{% if comment.edited %}<hr><span class="comment-edited">{% trans "Edited at" %} {{ comment.updated_date|date:"l d M Y" }} {{ comment.updated_date|time:"H:i" }}</span>{% endif %}</div>
+            {% if comment.is_hidden %}
+              <div class="media-body comment-text"><strong>{% trans "This comment has been hidden by the Bounty-O-Matic Gobelins." %}</strong></div>
+            {% else %}
+              <div class="media-body comment-text">{{ comment.text|safe }}{% if comment.edited %}<hr><span class="comment-edited">{% trans "Edited at" %} {{ comment.updated_date|date:"l d M Y" }} {{ comment.updated_date|time:"H:i" }}</span>{% endif %}</div>
+            {% endif %}
           </div>
         </div>
       </div>
