--- a/templates/bounties/list.html
+++ b/templates/bounties/list.html
@@ -94,37 +94,39 @@
   </ul>
 
 {% if num_pages > 1 %}
-  <nav>
-    <ul class="pagination pagination-sm">
-      {% if has_previous %}
+  <center>
+    <nav>
+      <ul class="pagination pagination-sm">
+        {% if has_previous %}
+          <li>
+            <a href="?page={{ previous_page_number }}" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+        {% else %}
+          <li class="disabled">
+            <a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a>
+          </li>
+        {% endif %}
         <li>
-          <a href="?page={{ previous_page_number }}" aria-label="Previous">
-            <span aria-hidden="true">&laquo;</span>
-          </a>
+          <span class="current">{% trans "Page" %} {{ page }} {% trans "on" %} {{ num_pages }}</span>
         </li>
-      {% else %}
-        <li class="disabled">
-          <a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a>
+        {% if has_next %}
+          <li>
+            <a href="?page={{ next_page_number }}" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        {% else %}
+          <li class="disabled">
+            <a href="#" aria-label="Next"><span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        {% endif %}
         </li>
-      {% endif %}
-      <li>
-        <span class="current">{% trans "Page" %} {{ page }} {% trans "on" %} {{ num_pages }}</span>
-      </li>
-      {% if has_next %}
-        <li>
-          <a href="?page={{ next_page_number }}" aria-label="Next">
-            <span aria-hidden="true">&raquo;</span>
-          </a>
-        </li>
-      {% else %}
-        <li class="disabled">
-          <a href="#" aria-label="Next"><span aria-hidden="true">&raquo;</span>
-          </a>
-        </li>
-      {% endif %}
-      </li>
-    </ul>
-  </nav>
+      </ul>
+    </nav>
+  </center>
 {% endif %}
 {% endblock %}
 
