--- a/templates/header.html
+++ b/templates/header.html
@@ -44,7 +44,7 @@
         </li>
         {% if user.is_authenticated %}
           <li>
-            <a title="{% trans 'Logout' %}" href="{% url 'logout' %}">
+            <a href="{% url 'logout' %}?next=/" title="{% trans 'Logout' %}">
               <span class="visible-lg visible-md visible-sm hidden-xs glyphicon glyphicon-off" aria-hidden="true"></span>
               <span class="hidden-lg hidden-md hidden-sm visible-xs">{% trans "Logout" %}</span>
             </a>
