Update login-error message

--- a/templates/accounts/login-error.html
+++ b/templates/accounts/login-error.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block content %}
-	<h1>{% trans "Oups! Gobelins won't you open that door?" %}</h1>
+	<h1>{% trans "Oups! Won't you open that door?" %}</h1>
 	<hr>
-	<p>{% trans "Error during login process. Maybe it's a BattleNet error or your Bounty-O-Matic account has been banned by Gobelins.<br>This is a sad day for you." %}</p>
+	<p>{% trans "Error during login process. Maybe it's a BattleNet error or Gobelins have banned your Bounty-O-Matic.<br>This is a sad day for you." %}</p>
 {% endblock %}
